Phone spacing fixes

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 h2 {
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     text-align: center;
 }
 
@@ -78,11 +78,12 @@ nav ul li a:hover {
 
 #my-location, #search-location {
     margin-top: 15px;
+    margin-bottom: 30px;
 }
 
 .search-form {
     background-color: lightgray;
-    margin: 0 auto 15px;
+    margin: 0 auto 25px;
     max-width: 500px;
     padding: 20px;
     display: grid;
